// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form with input 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller var-input--disabled\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-disabled\\">
      <div class=\\"var-input__dot var-input--line-disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller var-input--error\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--caret-error\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-error\\">
      <div class=\\"var-input__dot var-input--line-error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__message\\">不能为空</div>
        <div class=\\"var-form-details__length\\"></div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;
